	    +	fixed bug: nothing happens when I click on the test output.
	    +	XHTML support
    +	fixed bug: click on summary changes location
    +	fixed 2 minor javascript bugs where '#' was being used as a jQuery id ref
    +	added new feature: column sorting via Christian Bach's jquery.tablesorter
	plugin (bundled from http://tablesorter.com). optional.


0.08
    +	applied Steffen Schwigon's patch to display YAML TAP as
	pre-formatted text.
    +	fixed RT #43871: missing dep on File::Temp 0.17
	[reported by Paddy Newman]
    +	fixed RT #37983: CSS and JS Paths on Win32 get mangled
	and documented solution. [reported by Chris Davaz]
    +	wrote some selenium tests, finally.  found & fixed small bug where
	a test's html_id wasn't being set.
    +	fixed RT #48296: pod for js_uris mentions styles, not scripts
	[reported by Slaven Rezić]
    +	started on RT #41457: only got "incline_js" fixed
	[reported by Neil Hemingway]

0.07
    +	you can now specify an output file for the HTML to be written to!
    +	you can now set some config params using environment vars. this should
	make it easier to configure without having to write custom code.
    +	started writing an App::Prove plugin
    +	fixed RT #40306: Typo in TAP::Formatter::HTML (incline_js)
	(also reported by Nathan S. Watson-Haigh)
    +	applied patch from Michael Hendricks (who's work on this was sponsored
	by Grant Street Group) for a bug he & others identified:
	If tests are aggregated in multiple phases (per http://xrl.us/bedfih),
	... the HTML output shows only the results from the final phase.
    +	finally wrote some more tests, though selenium tests still not done
    +	fixed RT #41411: fails on empty directory
    *	started using IO::* modules for stdout & output_fh

0.06
    +	fixed RT #37019: tempdir without cleanup [reported by Steffen Schwigon]

0.05
    +	fixed width issue: test files with hundreds of tests were causing
	uncontrollable width in summary, making the report pretty annoying
	to read.