@@ -17,6 +17,29 @@ $(document).ready(function(){
 	$("div.test-detail").hide();
 	$("div#summary").find("a").click(function(){return false;});
 
+	$("td.file").append('<div class="back-up" style="display: none">up &uarr;</div>');
+	$("td.file > div.back-up").click(function(){
+		$(this).parent().scrollTo(1000);
+		return false;
+	});
+
+	$("td.file").hover(function(e){
+		var topTd   = $(this).offset().top;
+		var a       = $(this).children('a.file');
+		var aHeight = $(a).height();
+		// is the top of the td visible?
+		if ($(window).scrollTop() > topTd + aHeight) {
+		    // if (topDelta > $(window).height()) {
+		    // no: show the back up link
+		    var up = $(this).children('div.back-up');
+		    var newTop = e.pageY - topTd - aHeight;
+		    $(up).stop().hide().css({ top: newTop + 'px', opacity: '' });
+		    $(up).fadeIn();
+		}
+	    }, function(){
+		$(this).children('div.back-up').stop().fadeOut();
+	    });
+
 	// expand test detail when user clicks on a test file
 	$("a.file").click(function(){
 		// go all the way to the tr incase table structure changes:
